fixing container spacing

--- a/css/home.css
+++ b/css/home.css
@@ -69,6 +69,7 @@
     max-width: 600px;
     margin: 0 auto 28px;
     font-size: 1.1rem;
+    padding: 0 32px;
 }
 
 /* Promo Banner */
